--- a/aboutus.html
+++ b/aboutus.html
@@ -140,30 +140,20 @@
 </head>
 
 <body>
-<div class="header">
-  <div class="container">
-    <div class="row">
-		  <div class="cols col-4 phone">
-        <ul>
-          <li>(093) 103 1 103</li>
-          <li>(097) 103 1 103</li>
-        </ul>
-      </div>
+  <div class="header">
+    <div class="container">
+      <div class="row">
+  		  <div class="cols col-4 logo">
+          <a href="#"><img src="img/logo1-new.png" alt=""></a>
+        </div>
 
-      <div class="cols col-4 logo">
-        <a href="#"><img src="img/logo1.png" alt=""></a>
-      </div>
-
-      <div class="cols col-4 addres">
-        <ul>
-          <li>г. Киев</li>
-          <li class="street">ул. Платона Майбороды 32</li>
-        </ul>
+        <div class="cols col-8">
+            <p id="example1"></p>
+        </div>
       </div>
     </div>
-  </div>
 
-</div><!-- header -->
+  </div><!-- header -->
 
 <div class="menu menu-fixed-m">
 
@@ -183,8 +173,8 @@
                   <li class="active"><a href="aboutus.html">Знакомство</a></li>
                   <li><a href="#">Консультация</a>
                     <ul>
-                      <li><a href="online.html">Онлайн консультация</a></li>
                       <li><a href="meeting.html">Очная консультация</a></li>
+                      <li><a href="online.html">Онлайн консультация</a></li>
                     </ul>
                   </li>
                   <li><a href="therapy.html">Лечение</a></li>
@@ -233,8 +223,8 @@
         <li class="active"><a href="aboutus.html">Знакомство</a></li>
         <li><a href="#">Консультация</a>
           <ul class="drop-down">
-            <li><a href="online.html">Онлайн консультация</a></li>
             <li><a href="meeting.html">Очная консультация</a></li>
+            <li><a href="online.html">Онлайн консультация</a></li>
           </ul>
         </li>
         <li><a href="therapy.html">Лечение</a></li>
@@ -272,18 +262,31 @@
 
 <div class="aboutus">
 
-  <div class="container">
+  <div class="introduction">
+    <div class="container">
 
-    <img src="img/DSC_4324+.JPG" alt="">
-    <p><strong>Шкіряк Антон Антонович</strong> – головний лікар онкологічного центру «Клініка Спіженко», лікар-нейрохірург, онколог, менеджер та громадський діяч в сфері охорони здоров'я України, асистент опорної кафедри нейрохірургії Національної медичної академії післядипломної освіти ім. П.Л. Шупика, експерт багатьох медичних та соціальних програм на центральних телеканалах країни. </p>
-    <p>Професійний досвід в сфері нейрохірургії більше 11 років. Лікувальна діяльність починалась у відділеннях травматологічної ургентної допомоги, нейрореанімації, нейротравматології та нейроонкології в Обласному Клінічному Центрі Нейрохірургії та Неврології (м. Ужгород) під керівництвом видатного фахівця, єдиного тренера Європейської Асоціації Нейрохірургів на теренах СНД, президента Асоціації Нейрохірургів України професора Смоланки Володимира Івановича, що зіграло надважливу роль у засвоєнні різних напрямків лікування. </p>
-    <p>Під мудрим керуванням законодавця сучасної нейротравматології, Міністра Охорони Здоров’я України (2005), члена-кориспондента Академії Медичних Наук України, професора Поліщука Миколи Єфремовича, на опорній кафедрі нейрохірургії закінчив резидентуру, магістратуру та аспірантуру в Національній медичній академії післядипломної освіти ім. П.Л. Шупика в місті Київ.</p>
-    <img src="img/DSC_4496+.JPG" alt="" class="img-2">
-    <p>Членство в Всесвітній федерації нейрохірургічних товариств (WFNS) з 2010 року та Української асоціації нейрохірургів (УАН) з 2009 року надало змогу безперервно збагачувати знання про сучасні тенденції нейрохірургічної допомоги, а спеціалізація з фаху Онкологія, а згодом і сертифікація для проведення клінічних випробувань (GCP and clinical trial regulation) в 2015 році відкрила ще ширші горизонти у впровадженнні інновативних методик, засобів і препаратів в щоденній практиці. З 2010 року проходив короткочасні стажування в країнах Європи (Угорщина, Німеччина, Чехія) та США (Сан Антоніо, Техас). </p>
-    <p>Наприямки роботи охоплюють широкий спектр нейроонкологічних паталогій центральної та периферичної нервової системи, але найприорітетнішим з них є мікронейрохірургічне та комбіноване лікування гліальних пухлин, метастатичних уражень та доброякісних пухлин головного та спинного мозку.</p>
-    <img src="img/DSC_4674+.JPG" alt="">
-    <p>Громадська та телевізійна діяльність покликана доступно інформувати населення про важливість онкологічного скринінгу, ранньої діагностики, профілактики та лікування патологій та пропаганди якісної медичної допомоги нероздільної від висококласного сервісу.
-    </p>
+      <div class="cols col-12">
+        <div class="title">
+          <h1 class="header-post">Знакомство</h1>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+  <div class="container aboutus-main">
+
+    <img src="img/anton1.JPG" alt="">
+      <p>Шкиряк Антон Антонович – врач-нейрохирург, онколог, менеджер и общественный деятель в отрасли здравоохранения Украины, ассистент опорной кафедры нейрохирургии Национальной медицинской академии последипломного образования им. П.Л. Шупика, эксперт многих медицинских и социальных программ на центральных телеканалах страны.</p>
+      <p>Профессиональный опыт в сфере нейрохирургии более 11 лет. Лечебная деятельность начиналась в отделениях травматологической ургентной помощи, нейрореанимации, нейротравматологии и нейроонкологии в Областном Клиническом Центре Нейрохирургии и Неврологии (г. Ужгород) под руководством выдающегося специалиста, единственного тренера Европейской Ассоциации Нейрохирургов на просторах СНГ, президента Ассоциации Нейрохирургов Украины профессора Смоланки Владимира Ивановича, что сыграло наиважнейшую роль в усвоении разных направлений лечения.</p>
+
+    <img src="img/anton2.JPG" alt="" class="img-2">
+    <p>Под мудрым управлением законодателя современной нейротравматологии, министра здравоохранения Украины (2005), члена-корреспондента Национальной академии медицинских наук Украины, профессора Полищука Николая Ефремовича, на опорной кафедре нейрохирургии закончил резидентуру, магистратуру и аспирантуру в Национальной медицинской академии последипломного образования им. П.Л. Шупика в городе Киеве.</p>
+    <p>Членство во Всемирной федерации нейрохирургических обществ (WFNS) с 2010 года и Украинской ассоциации нейрохирургов (УАН) с 2009 года предоставило возможность беспрерывно обогащать знания о современных тенденциях нейрохирургической помощи, а специализация по специальности «Онкология», и со временем и сертификация для проведения клинических испытаний (GCP and clinical trial regulation) в 2015 году открыла более широкие горизонты во внедрении инновационных методик, средств и препаратов в ежедневной практике. С 2010 года проходил кратковременные стажировки в странах Европы (Венгрия, Германия, Чехия) и США (Сан-Антонио, Техас).</p>
+
+    <img src="img/anton3.JPG" alt="">
+    <p>Направления работы охватывают широкий спектр нейроонкологических патологий центральной и периферической нервной системы, но самыми приоритетными из них являются микронейрохирургическое и комбинированное лечение глиальных опухолей, метастатических поражений и доброкачественных опухолей головного и спинного мозга.</p>
+    <p>Общественная и телевизионная деятельность призвана доступно информировать население о важности онкологического скрининга, ранней диагностики, профилактики и лечения патологий и пропаганды качественной медпомощи, неотделимой от высококлассного сервиса.</p>
 
   </div>
 
@@ -311,14 +314,22 @@
   </div>
 </div>
 
-    <script>
-      new TypeIt('#example4', {
-      speed: 100,
-      strings: ['Для меня важно, чтобы пациент был поинформирован.', 'Для меня важно, чтобы пациент был поинформирован.'],
-      loop: true,
-      breakLines: false
-      });
-		</script>
+<!--  <script>
+    new TypeIt('#example4', {
+    speed: 100,
+    strings: ['Для меня важно, чтобы пациент был поинформирован.', 'Для меня важно, чтобы пациент был поинформирован.'],
+    loop: true,
+    breakLines: false
+    });
+  </script>-->
+
+<script>
+    new TypeIt('#example1', {
+    strings: 'НЕЙРОХИРУРГИЯ И ОНКОЛОГИЯ',
+    speed: 100,
+    autoStart: false,
+  });
+</script>
 
   <script src="js/menu.js"></script>
 
