--- a/meeting.html
+++ b/meeting.html
@@ -140,30 +140,20 @@
 </head>
 
 <body>
-<div class="header">
-  <div class="container">
-    <div class="row">
-		  <div class="cols col-4 phone">
-        <ul>
-          <li>(093) 103 1 103</li>
-          <li>(097) 103 1 103</li>
-        </ul>
-      </div>
+  <div class="header">
+    <div class="container">
+      <div class="row">
+  		  <div class="cols col-4 logo">
+          <a href="#"><img src="img/logo1-new.png" alt=""></a>
+        </div>
 
-      <div class="cols col-4 logo">
-        <a href="#"><img src="img/logo1.png" alt=""></a>
-      </div>
-
-      <div class="cols col-4 addres">
-        <ul>
-          <li>г. Киев</li>
-          <li class="street">ул. Платона Майбороды 32</li>
-        </ul>
+        <div class="cols col-8">
+            <p id="example1"></p>
+        </div>
       </div>
     </div>
-  </div>
 
-</div><!-- header -->
+  </div><!-- header -->
 
 <div class="menu menu-fixed-m">
 
@@ -183,8 +173,8 @@
                   <li><a href="aboutus.html">Знакомство</a></li>
                   <li><a href="#">Консультация</a>
                     <ul>
-                      <li><a href="online.html">Онлайн консультация</a></li>
                       <li class="active"><a href="meeting.html">Очная консультация</a></li>
+                      <li><a href="online.html">Онлайн консультация</a></li>
                     </ul>
                   </li>
                   <li><a href="therapy.html">Лечение</a></li>
@@ -233,8 +223,8 @@
         <li><a href="aboutus.html">Знакомство</a></li>
         <li><a href="#">Консультация</a>
           <ul class="drop-down">
-            <li><a href="online.html">Онлайн консультация</a></li>
             <li class="active"><a href="meeting.html">Очная консультация</a></li>
+            <li><a href="online.html">Онлайн консультация</a></li>
           </ul>
         </li>
         <li><a href="therapy.html">Лечение</a></li>
@@ -277,7 +267,7 @@
 
       <div class="cols col-12">
         <div class="title">
-          <h1 class="header-post"></h1>
+          <h1 class="header-post">Очная консультация</h1>
         </div>
       </div>
 
@@ -286,17 +276,17 @@
 
 
   <div class="container">
-    <img src="img/DSC_4263.jpg" alt="">
+    <img src="img/anton2.jpg" alt="">
     <div class="cols col-12 online-inner">
           <h4>Запись на очную консультацию</h4>
-          <p class="notes">Заповніть анкету нижче для отримання онлайн консультації. Опишіть коротко але змістовно Ваш діагноз. Додайте в одному архіві .rar або .zip формату відскановані або сфотографовані екземпляри заключень, анамнезів і результатів досліджень, зміст (усі файли) дисків зі знімками МРТ, КТ або ПЕТ КТ бажано в хронологічному порядку.</p>
-          <p class="notes">Після відправлення наш співробітник зв’яжеться з Вами за вказаним номером телефону або ж електронною поштою якнайшвидше.</p>
+          <p class="notes">Для записи на очную консультацию отправьте заявку. После отправления, в ближайшее время с Вами свяжется помощник Антона Антоновича для уточнения даты, времени и других подробностей консультации.</p>
+
           <form action="" method="post" class="wpcf7-form">
-          <p>ФИО пациента<br>
+          <p>Имя пациента<br>
           <input name="your-name" value="" size="40" type="text"></p>
           <p>Номер телефона<br>
           <input name="your-email" value="" size="40" type="email"></p>
-          <p>Коротко о диагнозе<br>
+          <p>Коротко о диагнозе и/или о жалобах<br>
           <textarea name="your-message" cols="40" rows="10"></textarea></p>
 
           <p><br></p>
@@ -307,10 +297,13 @@
 
     </div>
 
-    <p class="notes">Заповніть анкету нижче для отримання онлайн консультації. Опишіть коротко але змістовно Ваш діагноз. Додайте в одному архіві .rar або .zip формату відскановані або сфотографовані екземпляри заключень, анамнезів і результатів досліджень, зміст (усі файли) дисків зі знімками МРТ, КТ або ПЕТ КТ бажано в хронологічному порядку.</p>
-    <p class="notes">Після відправлення наш співробітник зв’яжеться з Вами за вказаним номером телефону або ж електронною поштою якнайшвидше.</p>
-    <p class="notes">Заповніть анкету нижче для отримання онлайн консультації. Опишіть коротко але змістовно Ваш діагноз. Додайте в одному архіві .rar або .zip формату відскановані або сфотографовані екземпляри заключень, анамнезів і результатів досліджень, зміст (усі файли) дисків зі знімками МРТ, КТ або ПЕТ КТ бажано в хронологічному порядку.</p>
-    <p class="notes">Після відправлення наш співробітник зв’яжеться з Вами за вказаним номером телефону або ж електронною поштою якнайшвидше.</p>
+    <p class="notes">Первый шаг на пути к выздоровлению пациента с нейрохирургическим или онкологическим заболеванием - это консультация специалиста.</p>
+    <p class="notes">Живое общение врача с пациентом имеет наиболее информативный характер для обеих сторон, предоставляя возможность предварительно оценить большинство возможностей лечения, получить ответы на все вопросы в развернутом виде.</p>
+    <p class="notes">Что нужно иметь с собой на первой встрече?</p>
+    <p class="notes">•	Все имеющиеся снимки магнитно-резонансной томографии (МРТ) или компьютерной томографии (КТ).</p>
+    <p class="notes">  •	Результаты предыдущих обследований и анализов.</p>
+    <p class="notes">  •	Выписки из предыдущих мест лечения.</p>
+    <p class="notes">  •	Медицинские записи о всех сопутствующих заболеваниях.</p>
 
 
   </div>
@@ -339,14 +332,22 @@
   </div>
 </div>
 
-    <script>
-      new TypeIt('#example4', {
-      speed: 100,
-      strings: ['Для меня важно, чтобы пациент был поинформирован.', 'Для меня важно, чтобы пациент был поинформирован.'],
-      loop: true,
-      breakLines: false
-      });
-		</script>
+<!--  <script>
+    new TypeIt('#example4', {
+    speed: 100,
+    strings: ['Для меня важно, чтобы пациент был поинформирован.', 'Для меня важно, чтобы пациент был поинформирован.'],
+    loop: true,
+    breakLines: false
+    });
+  </script>-->
+
+<script>
+    new TypeIt('#example1', {
+    strings: 'НЕЙРОХИРУРГИЯ И ОНКОЛОГИЯ',
+    speed: 100,
+    autoStart: false,
+  });
+</script>
 
   <script src="js/menu.js"></script>
 
