--- a/online.html
+++ b/online.html
@@ -140,30 +140,20 @@
 </head>
 
 <body>
-<div class="header">
-  <div class="container">
-    <div class="row">
-		  <div class="cols col-4 phone">
-        <ul>
-          <li>(093) 103 1 103</li>
-          <li>(097) 103 1 103</li>
-        </ul>
-      </div>
+  <div class="header">
+    <div class="container">
+      <div class="row">
+  		  <div class="cols col-4 logo">
+          <a href="#"><img src="img/logo1-new.png" alt=""></a>
+        </div>
 
-      <div class="cols col-4 logo">
-        <a href="#"><img src="img/logo1.png" alt=""></a>
-      </div>
-
-      <div class="cols col-4 addres">
-        <ul>
-          <li>г. Киев</li>
-          <li class="street">ул. Платона Майбороды 32</li>
-        </ul>
+        <div class="cols col-8">
+            <p id="example1"></p>
+        </div>
       </div>
     </div>
-  </div>
 
-</div><!-- header -->
+  </div><!-- header -->
 
 <div class="menu menu-fixed-m">
 
@@ -183,8 +173,8 @@
                   <li><a href="aboutus.html">Знакомство</a></li>
                   <li><a href="#">Консультация</a>
                     <ul>
-                      <li class="active"><a href="online.html">Онлайн консультация</a></li>
                       <li><a href="meeting.html">Очная консультация</a></li>
+                      <li class="active"><a href="online.html">Онлайн консультация</a></li>
                     </ul>
                   </li>
                   <li><a href="therapy.html">Лечение</a></li>
@@ -233,8 +223,8 @@
         <li><a href="aboutus.html">Знакомство</a></li>
         <li><a href="#">Консультация</a>
           <ul class="drop-down">
-            <li class="active"><a href="online.html">Онлайн консультация</a></li>
             <li><a href="meeting.html">Очная консультация</a></li>
+            <li class="active"><a href="online.html">Онлайн консультация</a></li>
           </ul>
         </li>
         <li><a href="therapy.html">Лечение</a></li>
@@ -288,20 +278,21 @@
   <div class="container">
     <img src="img/online.png" alt="">
     <div class="cols col-12 online-inner">
-          <p class="notes">Заповніть анкету нижче для отримання онлайн консультації. Опишіть коротко але змістовно Ваш діагноз. Додайте в одному архіві .rar або .zip формату відскановані або сфотографовані екземпляри заключень, анамнезів і результатів досліджень, зміст (усі файли) дисків зі знімками МРТ, КТ або ПЕТ КТ бажано в хронологічному порядку.</p>
-          <p class="notes">Після відправлення наш співробітник зв’яжеться з Вами за вказаним номером телефону або ж електронною поштою якнайшвидше.</p>
+          <p class="notes"> Заполните форму ниже для получения онлайн консультации. Опишите кратко но содержательно Ваш диагноз. Добавьте отсканированные или сфотографированные экземпляры заключений, анамнезов и результатов обследований. Также если есть в наличии добавьте в одном архиве .rar или .zip формата полное содержание (все файлы) диска с КТ, МРТ или ПЭТ КТ обследованием. После отправки дождитесь полной загрузки файла и сообщение об успешном отправления вашего запроса.
+</p>
+          <p class="notes">Максимальный объем файла 300 Мб.</p>
           <form action="" method="post" class="wpcf7-form">
-          <p>ФИО пациента<br>
+          <p>Имя пациента<br>
           <input name="your-name" value="" size="40" type="text"></p>
           <p>Номер телефона<br>
           <input name="your-email" value="" size="40" type="email"></p>
           <p>Электронный адрес<br>
           <input name="your-subject" value="" size="40" type="text"></p>
-          <p>Коротко о диагнозе<br>
+          <p>Коротко о диагнозе и/или о жалобах<br>
           <textarea name="your-message" cols="40" rows="10"></textarea></p>
-          <p>Завантажити файл<br>
+          <p>Загрузить файл<br>
           <input name="your-subject" value="" size="40" type="file"></p>
-          <input type="checkbox" id="subscribe-field"> <label for="subscribe-field">Натисканням на цю кнопку я висловлюю інформовану добровільну згоду на обробку персональних даних за умови дотримання їх захисту відповідно до вимог Закону України “Про захист персональних даних”.</label>
+          <input type="checkbox" id="subscribe-field"> <label for="subscribe-field">Я выражаю информированное добровольное согласие на обработку персональных данных при условии соблюдения их защиты в соответствии с требованиями Закона Украины "О защите персональных данных".</label>
 
           <p><br></p>
           <p><input value="Отправить" type="submit"><span class="ajax-loader"></span></p>
@@ -311,12 +302,13 @@
 
     </div>
 
-    <p class="notes">Заповніть анкету нижче для отримання онлайн консультації. Опишіть коротко але змістовно Ваш діагноз. Додайте в одному архіві .rar або .zip формату відскановані або сфотографовані екземпляри заключень, анамнезів і результатів досліджень, зміст (усі файли) дисків зі знімками МРТ, КТ або ПЕТ КТ бажано в хронологічному порядку.</p>
-    <p class="notes">Після відправлення наш співробітник зв’яжеться з Вами за вказаним номером телефону або ж електронною поштою якнайшвидше.</p>
-    <p class="notes">Заповніть анкету нижче для отримання онлайн консультації. Опишіть коротко але змістовно Ваш діагноз. Додайте в одному архіві .rar або .zip формату відскановані або сфотографовані екземпляри заключень, анамнезів і результатів досліджень, зміст (усі файли) дисків зі знімками МРТ, КТ або ПЕТ КТ бажано в хронологічному порядку.</p>
-    <p class="notes">Після відправлення наш співробітник зв’яжеться з Вами за вказаним номером телефону або ж електронною поштою якнайшвидше.</p>
+    <p class="notes">Вас интересует предварительная оценка специалиста, рекомендуемые методы диагностики или лечения Вашего заболевания, но Вы в ближайшее время не можете прийти на очную консультацию медицинское учреждение?</p>
 
+    <p class="notes">Онлайн консультация это лучшее решение для Вас!</p>
 
+    <p class="notes">Это особенно удобно для пациентов которіе находятся не в Киеве, но при этом хотят получить предварительный план лечения или диагностики перед приездом на очную консультацию.</p>
+
+    
   </div>
 
 </div>
@@ -343,14 +335,22 @@
   </div>
 </div>
 
-    <script>
-      new TypeIt('#example4', {
-      speed: 100,
-      strings: ['Для меня важно, чтобы пациент был поинформирован.', 'Для меня важно, чтобы пациент был поинформирован.'],
-      loop: true,
-      breakLines: false
-      });
-		</script>
+<!--  <script>
+    new TypeIt('#example4', {
+    speed: 100,
+    strings: ['Для меня важно, чтобы пациент был поинформирован.', 'Для меня важно, чтобы пациент был поинформирован.'],
+    loop: true,
+    breakLines: false
+    });
+  </script>-->
+
+<script>
+    new TypeIt('#example1', {
+    strings: 'НЕЙРОХИРУРГИЯ И ОНКОЛОГИЯ',
+    speed: 100,
+    autoStart: false,
+  });
+</script>
 
   <script src="js/menu.js"></script>
 
