--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.min.css">
 <link rel="stylesheet" href="fonts/ProximaNova/stylesheet.css">
 
+
 <script src="js/jquery-2.1.3.min.js"></script>
 
 <!--відгуки-->
@@ -53,7 +54,7 @@
   	$(window).scroll(function () {
   		if ($(this).scrollTop() > 150 && window.innerWidth >= 800 ) {
   			nav.addClass("f-menu");
-  		} else if ($(this).scrollTop() > 5 && window.innerWidth < 800 ) {
+  		} else if ($(this).scrollTop() > 0 && window.innerWidth < 800 ) {
           nav.addClass("f-menu");
         } else {
   			nav.removeClass("f-menu");
@@ -98,18 +99,10 @@
    		}
    	});
 
-    var headerm = $('.header-mobile');
-     $(window).scroll(function () {
-   		if ($(this).scrollTop() > 5 && window.innerWidth < 800) {
-   			headerm.addClass("header-mobile-hidden");
-   		} else {
-   			headerm.removeClass("header-mobile-hidden");
-   		}
-   	});
 
     var bannerm = $('.banner-m');
      $(window).scroll(function () {
-      if ($(this).scrollTop() > 5 && window.innerWidth < 800) {
+      if ($(this).scrollTop() > 1 && window.innerWidth < 800) {
         bannerm.addClass("banner-m-hidden");
       } else {
         bannerm.removeClass("banner-m-hidden");
@@ -156,6 +149,7 @@
                 <!-- Иконка меню -->
                 <div class="icon-close">
                   <img src="img/close-btn.png">
+
                 </div>
 
                 <!-- Меню -->
@@ -169,24 +163,47 @@
                     </ul>
                   </li>
                   <li><a href="therapy.html">Лечение</a></li>
+                  <li><a href="#">Отзывы</a></li>
                   <li><a href="#">Медиа</a></li>
                   <li><a href="#">Блог</a></li>
                   <li><a href="#">Контакты</a></li>
+
                 </ul>
+              <div class="lang-menu-mob">
+              <p>ЯЗЫК</p>
+              <ul>
+                <li class="active-m"><a href="#">RU</a></li>
+                <li><a href="#">UA</a></li>
+              </ul>
+              </div>
               </div>
 
 
                 <div class="icon-menu">
                   <img src="img/menu-ham-icon.png">
                 </div>
+
+
     </div>
 
-    <div class="cols col-8 phone-mobile">
+    <div class="cols col-8">
+      <div class="button-mobile">
+          <a href="#">ЗАПИСЬ НА ПРИЙОМ</a>
+      </div>
+    </div>
+
+    <div class="cols col-2">
+      <div class="phone-m">
+        <a href="tel:‎+380971031103">‎<i class="fa fa-phone" aria-hidden="true"></i></a>
+      </div>
+    </div>
+
+    <!--<div class="cols col-8 phone-mobile">
       <ul>
         <li>(093) 103 1 103</li>
         <li>(097) 103 1 103</li>
       </ul>
-    </div>
+    </div>-->
 
     <div class="cols col-2 lang-menu">
       <div id="m_body">
@@ -204,11 +221,7 @@
       <a href="#"><img src="img/logo_fixed.png"/></a>
    </div>
 
-   <div class="cols col-2 logo-fixed-m">
-      <a href="#"><img src="img/brain-m.png"/></a>
-    </div>
-
-    <div class="cols col-8 main-menu">
+   <div class="cols col-8 main-menu">
       <ul class="menu-font">
         <li class="active"><a href="index.html">Главная</a></li>
         <li><a href="aboutus.html">Знакомство</a></li>
@@ -219,6 +232,7 @@
           </ul>
         </li>
         <li><a href="therapy.html">Лечение</a></li>
+        <li><a href="#">Отзывы</a></li>
         <li><a href="#">Медиа</a></li>
         <li><a href="#">Блог</a></li>
         <li><a href="#">Контакты</a></li>
@@ -232,23 +246,25 @@
   </div>
   </div>
 
-  <div class="header-mobile">
-    <div class="container">
-        <div class="cols col-12">
-          <a href="#"><img src="img/logo1.png" alt=""></a>
-        </div>
-      </div>
-  </div><!-- header-mobile -->
 
-  <div class="button-mobile">
-    <div class="container">
-      <div class="cols col-12">
-        <a href="#">ЗАПИСЬ НА ПРИЙОМ</a>
-      </div>
-    </div>
-  </div>
 
 </div><!--end menu-->
+
+<div class="header-mobile">
+  <div class="container">
+      <div class="cols col-12">
+        <a href="#"><img src="img/logo1.png" alt=""></a>
+      </div>
+    </div>
+</div><!-- header-mobile -->
+
+<div class="slogan-m">
+  <div class="container">
+    <div class="cols col-12">
+      <h1>Нейрохірургія та Онкологія</h1>
+    </div>
+  </div>
+</div>
 
 <div class="banner">
   <div class="container">
