--- a/meeting.html
+++ b/meeting.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.min.css">
 <link rel="stylesheet" href="fonts/ProximaNova/stylesheet.css">
 
+
 <script src="js/jquery-2.1.3.min.js"></script>
 
 <!--відгуки-->
@@ -53,7 +54,7 @@
   	$(window).scroll(function () {
   		if ($(this).scrollTop() > 150 && window.innerWidth >= 800 ) {
   			nav.addClass("f-menu");
-  		} else if ($(this).scrollTop() > 5 && window.innerWidth < 800 ) {
+  		} else if ($(this).scrollTop() > 0 && window.innerWidth < 800 ) {
           nav.addClass("f-menu");
         } else {
   			nav.removeClass("f-menu");
@@ -98,34 +99,17 @@
    		}
    	});
 
-    var headerm = $('.header-mobile');
-     $(window).scroll(function () {
-   		if ($(this).scrollTop() > 5 && window.innerWidth < 800) {
-   			headerm.addClass("header-mobile-hidden");
-   		} else {
-   			headerm.removeClass("header-mobile-hidden");
-   		}
-   	});
 
     var bannerm = $('.banner-m');
      $(window).scroll(function () {
-      if ($(this).scrollTop() > 5 && window.innerWidth < 800) {
+      if ($(this).scrollTop() > 1 && window.innerWidth < 800) {
         bannerm.addClass("banner-m-hidden");
       } else {
         bannerm.removeClass("banner-m-hidden");
       }
     });
 
-    var introductionh = $('.introduction');
-     $(window).scroll(function () {
-      if ($(this).scrollTop() > 150 && window.innerWidth >= 800) {
-        introductionh.addClass("introduction-hidden");
-      } else if ($(this).scrollTop() > 5 && window.innerWidth < 800) {
-        introductionh.addClass("introduction-hidden");
-      } else {
-      introductionh.removeClass("introduction-hidden");
-    }
-    });
+
 
   });
 
@@ -140,20 +124,20 @@
 </head>
 
 <body>
-  <div class="header">
-    <div class="container">
-      <div class="row">
-  		  <div class="cols col-4 logo">
-          <a href="#"><img src="img/logo1-new.png" alt=""></a>
-        </div>
+<div class="header">
+  <div class="container">
+    <div class="row">
+		  <div class="cols col-4 logo">
+        <a href="#"><img src="img/logo1-new.png" alt=""></a>
+      </div>
 
-        <div class="cols col-8">
-            <p id="example1"></p>
-        </div>
+      <div class="cols col-8">
+          <p id="example1"></p>
       </div>
     </div>
+  </div>
 
-  </div><!-- header -->
+</div><!-- header -->
 
 <div class="menu menu-fixed-m">
 
@@ -165,37 +149,61 @@
                 <!-- Иконка меню -->
                 <div class="icon-close">
                   <img src="img/close-btn.png">
+
                 </div>
 
                 <!-- Меню -->
                 <ul>
-                  <li><a href="index.html">Главная</a></li>
+                  <li class="active"><a href="index.html">Главная</a></li>
                   <li><a href="aboutus.html">Знакомство</a></li>
                   <li><a href="#">Консультация</a>
                     <ul>
-                      <li class="active"><a href="meeting.html">Очная консультация</a></li>
+                      <li><a href="meeting.html">Очная консультация</a></li>
                       <li><a href="online.html">Онлайн консультация</a></li>
                     </ul>
                   </li>
                   <li><a href="therapy.html">Лечение</a></li>
+                  <li><a href="#">Отзывы</a></li>
                   <li><a href="#">Медиа</a></li>
                   <li><a href="#">Блог</a></li>
                   <li><a href="#">Контакты</a></li>
+
                 </ul>
+              <div class="lang-menu-mob">
+              <p>ЯЗЫК</p>
+              <ul>
+                <li class="active-m"><a href="#">RU</a></li>
+                <li><a href="#">UA</a></li>
+              </ul>
+              </div>
               </div>
 
 
                 <div class="icon-menu">
                   <img src="img/menu-ham-icon.png">
                 </div>
+
+
     </div>
 
-    <div class="cols col-8 phone-mobile">
+    <div class="cols col-8">
+      <div class="button-mobile">
+          <a href="#">ЗАПИСЬ НА ПРИЙОМ</a>
+      </div>
+    </div>
+
+    <div class="cols col-2">
+      <div class="phone-m">
+        <a href="tel:‎+380971031103">‎<i class="fa fa-phone" aria-hidden="true"></i></a>
+      </div>
+    </div>
+
+    <!--<div class="cols col-8 phone-mobile">
       <ul>
         <li>(093) 103 1 103</li>
         <li>(097) 103 1 103</li>
       </ul>
-    </div>
+    </div>-->
 
     <div class="cols col-2 lang-menu">
       <div id="m_body">
@@ -213,21 +221,18 @@
       <a href="#"><img src="img/logo_fixed.png"/></a>
    </div>
 
-   <div class="cols col-2 logo-fixed-m">
-      <a href="#"><img src="img/brain-m.png"/></a>
-    </div>
-
-    <div class="cols col-8 main-menu">
+   <div class="cols col-8 main-menu">
       <ul class="menu-font">
-        <li><a href="index.html">Главная</a></li>
+        <li class="active"><a href="index.html">Главная</a></li>
         <li><a href="aboutus.html">Знакомство</a></li>
         <li><a href="#">Консультация</a>
           <ul class="drop-down">
-            <li class="active"><a href="meeting.html">Очная консультация</a></li>
+            <li><a href="meeting.html">Очная консультация</a></li>
             <li><a href="online.html">Онлайн консультация</a></li>
           </ul>
         </li>
         <li><a href="therapy.html">Лечение</a></li>
+        <li><a href="#">Отзывы</a></li>
         <li><a href="#">Медиа</a></li>
         <li><a href="#">Блог</a></li>
         <li><a href="#">Контакты</a></li>
@@ -241,23 +246,17 @@
   </div>
   </div>
 
-  <div class="header-mobile">
-    <div class="container">
-        <div class="cols col-12">
-          <a href="#"><img src="img/logo1.png" alt=""></a>
-        </div>
-      </div>
-  </div><!-- header-mobile -->
 
-  <div class="button-mobile">
-    <div class="container">
-      <div class="cols col-12">
-        <a href="#">ЗАПИСЬ НА ПРИЙОМ</a>
-      </div>
-    </div>
-  </div>
 
 </div><!--end menu-->
+
+<div class="header-mobile">
+  <div class="container">
+      <div class="cols col-12">
+        <a href="#"><img src="img/logo1.png" alt=""></a>
+      </div>
+    </div>
+</div><!-- header-mobile -->
 
 
 <div class="online">
