--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
   <script type="text/javascript" src="fancybox/jquery.fancybox.js"></script>
 
+
+  <!--анімація-->
+
+  <link rel="stylesheet" type="text/css" media="all" href="css/animate.css">
+  <link rel="stylesheet" href="css/animate.min.css">
+
   <!--відгуки-->
 
   <link rel="stylesheet" href="css/owl.carousel.min.css">
@@ -129,7 +135,7 @@
       </div>
 
       <div class="cols col-8">
-          <p id="example1"></p>
+          <p class="animated fadeInUp">НЕЙРОХИРУРГИЯ И ОНКОЛОГИЯ</p>
       </div>
     </div>
   </div>
